welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:6: error: type mismatch;
 found   : Boolean
 required: Int
			if (nums(y)==9) {
                                 ^arrayFront9:7: error: reassignment to val
				x=true
                                 ^