welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
	var y:Boolean=false;
	
	if (nums.length>=4) {
		for (x<-0 to 3) {
			if (nums(y)==9) {
				x=true
			}
		}
	}
	return y
}
